	Test unit for LCCompoundFileReader and LCCompoundFileWriter.
	* Source/Index/TestFilterIndexReaderh:
	* Source/Index/TestFilterIndexReader.m:
	Test unit for LCFilterIndexReader.
	This test also has memory leaking problem (see FIXME).
	* Source/Index/TestSegmentTermDocs.h:
	* Source/Index/TestSegmentTermDocs.m:
	Test unit for LCSegmentTermDocs.
	* Fix problems of "ukrun -q".

2005-04-08 Yen-Ju Chen <yjchenx at gmail _dot_ com>

	Note: test units broken (probably memory leaks).
	"ukrun -q LuceneKit.bundle" won't finish.
	"ukrun LuceneKit.bundle" works fine.
	* Source/Index/TestIndexWriter.h:
	* Source/Index/TestIndexWriter.m: 
	Test unit for LCIndexWriter.

2005-04-05 Yen-Ju Chen <yjchenx at gmail _dot_ com>

	* Source/Index/TestSegmentMerger.h:
	* Source/Index/TestSegmentMerger.m: 
	Test unit for LCSegmentMerger
	* Current test result: 
	Result: 21 classes, 48 methods, 335447 tests, 0 failed

2005-04-05 Quentin Mathe <qmathe@club-internet.fr>

	Note: tests suite fixed now (but with GNUstep, currently interrupted by 
	"___moddi3 undefined symbol" error).
	* Headers/LuceneKit.h: Added (LuceneKit umbrella header).
	* Source/GNUmakefile: Put -DHAVE_UKTEST in ADDITIONAL_OBJCFLAGS and not 
	ADDITIONAL_LDFLAGS (moved in GNUmakefile.preamble now).
	* GNUmakefile.preamble: Added.
	* GNUmakefile:
	* Source/GNUmakefile:
	* Source/Analysis/GNUmakefile:
	* Source/Document/GNUmakefile:
	* Source/Index/GNUmakefile:
	* Source/Java/GNUmakefile:
	* Source/Search/GNUmakefile:
	* Source/Store/GNUmakefile:
	* Source/Util/GNUmakefile:
	Moved shared variables like ADDITIONAL_OBJCFLAGS in GNUmakefile.preamble at 
	LuceneKit top level. Disabled #import related warnings.
	* Headers/Util/NSString+Additions.h: Replaced #import directive by #include.

2005-04-05 Yen-Ju Chen <yjchenx at gmail _dot_ com>

	* Source/Index/LCIndexInput.m: Deal with string length properly.
	* Source/Index/TestTermVectorsReader.m: New test units.

2005-04-05 Quentin Mathe <qmathe@club-internet.fr>
